# vibe

./: .env.local.example  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CODE_QUALITY_GUIDE.md  LICENSE  Makefile  README.md  knip.json  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  vitest.config.mjs
.cursor/: mcp.json
.github/workflows/: ci.yml  format.yml
.husky/: pre-commit
app/: .env.local  page.tsx
backend/: .env.example  pyproject.toml
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: api.py  message_db.py  project.py  project_db.py  project_message.py  user.py
backend/app/repositories/: project_repository.py
backend/app/routes/: auth.py  generate.py  health.py  projects.py  ws.py
backend/app/services/: auth_service.py  build_service.py  claude_service.py  fallback_generator.py  notification_service.py  preview_service.py  project_service.py  task_service.py
backend/app/tools/: __init__.py  builders.py  command_adapter.py  file_adapter.py
backend/tests/: test_auth.py  test_build_service.py  test_claude_service.py  test_project_service.py
components/: auth-button.tsx  code-viewer.tsx  conversation-panel.tsx  preview-window.tsx  status-panel.tsx
docker/: .dockerignore  Dockerfile.backend  Dockerfile.frontend  compose.yaml
docs/: AUTH_SETUP.md  BACKEND.md  DEPLOYMENT.md  FRONTEND.md
frontend/: .env.local.example  .oxfmtrc.json  .prettierignore  package.json
frontend/src/app/: layout.tsx
frontend/src/components/: code-viewer.tsx  conversation-panel.tsx  login-form.tsx  preview-window.tsx  projects-sidebar.tsx  social-icons.tsx  user-menu.tsx
frontend/src/lib/: auth-client.ts
frontend/src/styles/: globals.css
hooks/: use-generation-session.ts
hooks/generation/: types.ts
hooks/generation/services/: file-service.ts  project-service.ts
hooks/generation/utils/: api.ts  conversation.ts  preview.ts
lib/: auth-client.ts  auth.ts  db.ts
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/(main)/: layout.tsx  page.tsx
src/app/login/: page.tsx
src/backend/: .env.example
src/backend/app/: database.py  dependencies.py
src/components/: app-shell.tsx  auth-button.tsx  code-viewer.tsx  conversation-panel.tsx  error-boundary.tsx  file-tree.tsx  lazy-load.tsx  login-form.tsx  metagpt-logo.tsx  preview-window.tsx  projects-sidebar.tsx  social-icons.tsx  status-panel.tsx  user-menu.tsx
src/components/ai-elements/: actions.tsx  artifact.tsx  branch.tsx  chain-of-thought.tsx  checkpoint.tsx  code-block.tsx  confirmation.tsx  context.tsx  conversation.tsx  edge.tsx  inline-citation.tsx  loader.tsx  message.tsx  model-selector.tsx  open-in-chat.tsx  prompt-input.tsx  queue.tsx  reasoning.tsx  shimmer.tsx  sources.tsx  suggestion.tsx  task.tsx  tool.tsx  web-preview.tsx
src/contexts/: project-context.tsx
src/hooks/: use-error-toast.ts  use-generation-session.ts  use-performance.ts
src/lib/: auth-client.ts  auth.ts  cache.ts  db.ts  errors.ts
src/test/: setup.ts
(+103 files in other folders)
