[project]
name = "claude-app-builder-backend"
version = "0.1.0"
description = "FastAPI backend for the Claude-powered web application builder"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
    "anyio>=4.0.0",
    "aiofiles>=23.2.1",
    "structlog>=23.3.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.44",
    "aiosqlite>=0.21.0",
    "cryptography>=46.0.3",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "pyjwt[crypto]>=2.10.1",
    "starlette>=0.49.3",
    "claude-agent-sdk>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = []

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = ["app", "pyproject.toml"]
