[project]
name = "vibe"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
    "anyio>=4.0.0",
    "aiofiles>=23.2.1",
    "structlog>=23.3.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.44",
    "aiosqlite>=0.21.0",
    "cryptography>=46.0.3",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "pyjwt[crypto]>=2.10.1",
    "starlette>=0.49.3",
    "claude-agent-sdk>=0.1.9",
]

[project.scripts]
dev = "app.main:start"

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = ["app", "pyproject.toml"]
