[project]
name = "vibe"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "anyio>=4.12.1",
    "claude-agent-sdk>=0.1.20",
    "cryptography>=46.0.3",
    "fastapi>=0.128.0",
    "greenlet>=3.3.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt[crypto]>=2.10.1",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "starlette>=0.50.0",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.40.0",
]

[project.scripts]
dev = "app.main:start"

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = ["app", "pyproject.toml"]
